## Process this file with automake to produce Makefile.in

SUBDIRS = \
	g-ir-docs	\
	reference	\
	\
	performance-logs

EXTRA_DIST = \
	README.md			\
	contexts.txt			\
	debug-plug-ins.txt		\
	exif-handling.txt		\
	gitlab-milestones.txt		\
	includes.txt			\
	libtool-instructions.txt	\
	parasites.txt			\
	release-howto.txt		\
	tagging.txt			\
	ui-framework.txt		\
	undo.txt			\
	version.in
