## Process this file with automake to produce Makefile.in

SUBDIRS = \
	g-ir-docs	\
	reference	\
	\
	performance-logs

EXTRA_DIST = \
	HACKING.md			\
	README.md			\
	contexts.txt			\
	debug-plug-ins.txt		\
	includes.txt			\
	parasites.txt			\
	release-howto.txt		\
	tagging.txt			\
	ui-framework.txt		\
	undo.txt
